Добавил ко всем пакетам их версии

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask
-flask_session
-flask_login
-flask-babel
-flask-babel-js
-spotipy
-yandex-music
-deezer-python
-vk_api
-requests
-pymysql
-yookassa
+Flask==2.0.2
+flask_session==0.4.0
+flask_login==0.5.0
+flask-babel==2.0.0
+flask-babel-js==1.0.2
+spotipy==2.19.0
+yandex-music==1.0.0
+deezer-python==5.2.0
+vk_api==11.9.7
+requests==2.25.1
+pymysql==1.0.2
+yookassa==2.2.3
 authlib==0.11
-google-api-python-client
-google-auth
-virtualenv
-sshtunnel
+google-api-python-client==2.37.0
+google-auth==2.6.0
+virtualenv==20.13.1
+sshtunnel==0.4.0
