Добавлена возможность переносить плейлисты в deezer + сохранение плелистов в бд из deezer

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,78 @@
-Flask==2.0.2
-flask_session==0.4.0
-flask_login==0.5.0
-flask-babel==2.0.0
-flask-babel-js==1.0.2
-spotipy==2.19.0
-yandex-music==1.0.0
+anyio==3.5.0
+Authlib==0.11
+Babel==2.9.1
+bcrypt==3.2.0
+bidict==0.22.0
+cachelib==0.6.0
+cachetools==5.0.0
+certifi==2020.12.5
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.0.3
+colorama==0.4.4
+coverage==6.3.2
+cryptography==36.0.1
 deezer-python==5.2.0
-vk_api==11.9.7
-requests==2.25.1
-pymysql==1.0.2
-yookassa==2.2.3
-authlib==0.11
+Deprecated==1.2.13
+distlib==0.3.4
+distro==1.6.0
+filelock==3.4.2
+Flask==2.0.2
+Flask-Admin==1.6.0
+Flask-Babel==2.0.0
+Flask-Babel-JS==1.0.2
+Flask-Login==0.5.0
+Flask-Session==0.4.0
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+google-api-core==2.5.0
 google-api-python-client==2.37.0
 google-auth==2.6.0
-virtualenv==20.13.1
-sshtunnel==0.4.0
-werkzeug==2.0.3
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.54.0
+greenlet==1.1.2
+h11==0.12.0
+httpcore==0.14.7
+httplib2==0.20.4
+httpx==0.22.0
+idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+mysql-connector-python==8.0.28
+mysqlclient==2.1.0
+netaddr==0.8.0
+paramiko==2.9.2
+platformdirs==2.5.0
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
 pylast==5.0.0
-sqlalchemy
+PyMySQL==1.0.2
+PyNaCl==1.5.0
+pyparsing==3.0.7
+PySocks==1.7.1
+python-engineio==4.3.1
+python-socketio==5.5.2
+pytz==2021.3
+requests==2.25.1
+rfc3986==1.5.0
+rsa==4.8
+six==1.16.0
+sniffio==1.2.0
+spotipy==2.19.0
+SQLAlchemy==1.4.35
+sshtunnel==0.4.0
+uritemplate==4.1.1
+urllib3==1.26.3
+virtualenv==20.13.1
+vk-api==11.9.7
+Werkzeug==2.0.3
+wrapt==1.13.3
+WTForms==3.0.1
+yandex-music==1.0.0
+yookassa==2.2.3
+zope.event==4.5.0
+zope.interface==5.4.0
